--- a/index.html
+++ b/index.html
@@ -1,7 +1,32 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>NATO - Ukraine IED Incidents</title>
+
+    <!-- Load CSS libraries -->
+    <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/style.css">
+</head>
+
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <!-- Header Navigation -->
+    <div id="header"></div>
+
+
+    <!-- Load JS libraries -->
+    <script type="text/javascript" src="lib/jquery/jquery.min.js"></script>
+    <script type="text/javascript" src="lib/bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="lib/d3/d3.min.js"></script>
+
+    <!-- Load Project libraries -->
+    <script type="text/javascript" src="js/main.js"></script>
+
+    <!-- Load Page libraries -->
+    <script type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
