--- a/map.html
+++ b/map.html
@@ -27,6 +27,6 @@
 <script type="text/javascript" src="js/main.js"></script>
 
 <!-- Load Page libraries -->
-<script type="text/javascript" src="js/textvis.js"></script>
+<script type="text/javascript" src="js/map.js"></script>
 </body>
 </html>
