--- a/text.html
+++ b/text.html
@@ -27,6 +27,6 @@
 <script type="text/javascript" src="js/main.js"></script>
 
 <!-- Load Page libraries -->
-<script type="text/javascript" src="js/mainvis.js"></script>
+<script type="text/javascript" src="js/text.js"></script>
 </body>
 </html>
