--- a/v1/how.html
+++ b/v1/how.html
@@ -32,6 +32,7 @@
         <div class="row">
             <div class="col-md-8">
                 <div id="textVis"></div>
+                <div id="fullTextVis"></div>
             </div>
             <div class="col-md-4">
 
@@ -45,6 +46,7 @@
     <script type="text/javascript" src="lib/bootstrap/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="lib/other/queue.min.js"></script>
     <script type="text/javascript" src="lib/d3/d3.min.js"></script>
+    <script type="text/javascript" src="lib/other/lodash.min.js"></script>
 
     <!-- Load Project libraries -->
     <script type="text/javascript" src="js/common.js"></script>
@@ -52,6 +54,7 @@
     <!-- Load Page libraries -->
     <script type="text/javascript" src="js/timeline.js"></script>
     <script type="text/javascript" src="js/word-cloud.js"></script>
+    <script type="text/javascript" src="js/full-text.js"></script>
     <script type="text/javascript" src="js/how-main.js"></script>
 </body>
 </html>
