--- a/v1/what.html
+++ b/v1/what.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/sankeyStyle.css">
 </head>
 
 <body>
@@ -31,10 +32,24 @@
         <div class="row-spacer"></div>
         <div class="row">
             <div class="col-md-8">
-                <div id="sankeyVis"></div>
+                <div class="form-group">
+                    <label><strong>Select Analysis</strong>&nbsp;
+                        <select class="form-control" id="iedTypeSelect" onchange="iedTypeSelect()">
+                            <option value="byType">IED by Type</option>
+                            <option value="byTypeAndOutcome">IED by Type and Outcome</option>
+                        </select>
+                    </label>
+                </div>
             </div>
             <div class="col-md-4">
-
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-7">
+                <div id="sankeyVis"></div>
+            </div>
+            <div class="col-md-5">
+                <div id="incidentTable"></div>
             </div>
         </div>
 
@@ -45,13 +60,14 @@
     <script type="text/javascript" src="lib/bootstrap/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="lib/other/queue.min.js"></script>
     <script type="text/javascript" src="lib/d3/d3.min.js"></script>
+    <script type="text/javascript" src="lib/other/sankey.js"></script>
 
     <!-- Load Project libraries -->
     <script type="text/javascript" src="js/common.js"></script>
 
     <!-- Load Page libraries -->
     <script type="text/javascript" src="js/timeline.js"></script>
-    <script type="text/javascript" src="js/sankey.js"></script>
+    <script type="text/javascript" src="js/sankeyVis.js"></script>
     <script type="text/javascript" src="js/what-main.js"></script>
 </body>
 </html>
