Resizing the visuals. Changed some labels.

--- a/v1/what.html
+++ b/v1/what.html
@@ -33,7 +33,7 @@
         <div class="row">
             <div class="col-md-8">
                 <div class="form-group">
-                    <label><strong>Select Analysis</strong>&nbsp;
+                    <label><strong>Select IED Analysis</strong>&nbsp;
                         <select class="form-control" id="iedTypeSelect" onchange="iedTypeSelect()">
                             <option value="byType">IED by Type</option>
                             <option value="byTypeAndOutcome">IED by Type and Outcome</option>
@@ -42,6 +42,7 @@
                 </div>
             </div>
             <div class="col-md-4">
+                <label><strong>IED Details</strong>
             </div>
         </div>
         <div class="row">
