Added the city analysis.

--- a/v1/map.html
+++ b/v1/map.html
@@ -54,6 +54,18 @@
             </div>
             <div class="col-md-4"></div>
         </div>
+
+
+        <div class="row-spacer"></div>
+		<h4>Number of IED Events by City</h4>
+		<div class="row">
+		        <div id="timeBarChartVis" class="col-md-9"></div>
+		</div>
+		<div class="row">
+		        <div id="heatMatrixVis" class="col-md-9"></div>
+		        <div id="cityBarChartVis" class="col-md-3"></div>
+		</div>
+
     </div>
 
     <!-- Load JS libraries -->
@@ -71,5 +83,8 @@
     <script type="text/javascript" src="js/map.js"></script>
     <script type="text/javascript" src="js/timeline.js"></script>
     <script type="text/javascript" src="js/map-main.js"></script>
+    <script type="text/javascript" src="js/heatMatrix.js"></script>
+    <script type="text/javascript" src="js/cityBarChart.js"></script>
+    <script type="text/javascript" src="js/timeBarChart.js"></script>
 </body>
 </html>
