Home page update

--- a/v1/how.html
+++ b/v1/how.html
@@ -25,9 +25,11 @@
         <div class="row-spacer"></div>
         <div class="row">
             <div class="col-md-8">
-                <div id="timelineVis"></div>
+                <div id="timelineVis" class="img-responsive"></div>
             </div>
-            <div class="col-md-4"></div>
+            <div class="col-md-4">
+                <div id="countsVis" class="img-responsive"></div>
+            </div>
         </div>
         <div class="row-spacer"></div>
         <div class="row">
@@ -86,6 +88,7 @@
 
     <!-- Load Page libraries -->
     <script type="text/javascript" src="js/timeline.js"></script>
+    <script type="text/javascript" src="js/counts.js"></script>
     <script type="text/javascript" src="js/word-cloud.js"></script>
     <script type="text/javascript" src="js/full-text.js"></script>
     <script type="text/javascript" src="js/how-main.js"></script>
