--- a/v1/index.html
+++ b/v1/index.html
@@ -17,16 +17,48 @@
     <!-- Header Navigation -->
     <div id="header"></div>
 
+    <div class="container">
+        <div class="row-spacer"></div>
+        <div class="row-spacer"></div>
+        <div class="row">
+            <div class="col-md-12">
+                <div id="timelineVis" class="img-responsive"></div>
+            </div>
+        </div>
+        <div class="row-spacer"></div>
+        <div class="row-spacer"></div>
+        <div class="row-spacer"></div>
+        <div class="row">
+            <div class="col-md-1"></div>
+            <div class="col-md-10 text-center">
+                <div id="countsVis" class="img-responsive"></div>
+            </div>
+            <div class="col-md-1"></div>
+        </div>
+        <div class="row-spacer"></div>
+        <div class="row-spacer"></div>
+        <div class="row-spacer"></div>
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <a href="#" class="btn btn-success btn-lg">Explore Vis <i class="fa fa-play" aria-hidden="true"></i></a>
+            </div>
+        </div>
+    </div>
+
 
     <!-- Load JS libraries -->
     <script type="text/javascript" src="lib/jquery/jquery.min.js"></script>
     <script type="text/javascript" src="lib/bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="lib/other/queue.min.js"></script>
     <script type="text/javascript" src="lib/d3/d3.min.js"></script>
+    <script type="text/javascript" src="lib/other/lodash.min.js"></script>
 
     <!-- Load Project libraries -->
     <script type="text/javascript" src="js/common.js"></script>
 
     <!-- Load Page libraries -->
+    <script type="text/javascript" src="js/timeline-index.js"></script>
+    <script type="text/javascript" src="js/counts.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
