Update home page

--- a/v1/index.html
+++ b/v1/index.html
@@ -39,9 +39,11 @@
         <div class="row-spacer"></div>
         <div class="row-spacer"></div>
         <div class="row">
-            <div class="col-md-12 text-center">
-                <a href="#" class="btn btn-success btn-lg">Explore Vis <i class="fa fa-play" aria-hidden="true"></i></a>
+            <div class="col-md-3"></div>
+            <div class="col-md-6 text-center">
+                <a href="map.html" class="btn btn-success btn-lg btn-block">Explore <i class="fa fa-play" aria-hidden="true"></i></a>
             </div>
+            <div class="col-md-3"></div>
         </div>
     </div>
 
