--- a/v1/index.html
+++ b/v1/index.html
@@ -45,6 +45,12 @@
             </div>
             <div class="col-md-3"></div>
         </div>
+        <div class="row-spacer"></div>
+        <div class="row-spacer"></div>
+        <div class="row-spacer"></div>
+        <div class="row-spacer"></div>
+        <div class="row-spacer"></div>
+        <div class="row-spacer"></div>
     </div>
 
 
