--- a/v1/how.html
+++ b/v1/how.html
@@ -57,8 +57,8 @@
                 </div>
                 <div class="row">
                     <div class="col-md-12">
-                        <div id="textVis"></div>
-                        <div id="fullTextVis"></div>
+                        <div id="textVis" class="img-responsive"></div>
+                        <div id="fullTextVis" class="img-responsive"></div>
                     </div>
                 </div>
             </div>
