--- a/v1/map.html
+++ b/v1/map.html
@@ -24,9 +24,11 @@
         <div class="row-spacer"></div>
         <div class="row">
             <div class="col-md-8">
-                <div id="timelineVis"></div>
+                <div id="timelineVis" class="img-responsive"></div>
             </div>
-            <div class="col-md-4"></div>
+            <div class="col-md-4">
+                <div id="countsVis" class="img-responsive"></div>
+            </div>
         </div>
         <div class="row-spacer"></div>
         <div class="row">
@@ -82,6 +84,7 @@
     <!-- Load Page libraries -->
     <script type="text/javascript" src="js/map.js"></script>
     <script type="text/javascript" src="js/timeline.js"></script>
+    <script type="text/javascript" src="js/counts.js"></script>
     <script type="text/javascript" src="js/map-main.js"></script>
     <script type="text/javascript" src="js/heatMatrix.js"></script>
     <script type="text/javascript" src="js/cityBarChart.js"></script>
