--- a/v2/map.html
+++ b/v2/map.html
@@ -36,12 +36,11 @@
                 <div class="form-group">
                     <label><strong>Region color</strong>&nbsp;
                         <select class="form-control" id="regionColorSelect" onchange="regionColorSelect()">
-                            <option value="IEDevents">Nb IED Incidents</option>
-                            <option value="KIA">Nb Persons Killed</option>
-                            <option value="WIA">Nb Persons Wounded</option>
-                            <option value="area">Area</option>
                             <option value="population">Population</option>
                             <option value="pop_density">Population Density</option>
+                            <option value="IEDevents">IED Incidents</option>
+                            <option value="KIA">Persons Killed</option>
+                            <option value="WIA">Persons Wounded</option>
                         </select>
                     </label>
                 </div>
@@ -51,21 +50,14 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-8">
+            <div class="col-md-9">
                 <div id="mapVis"></div>
             </div>
-            <div class="col-md-4"></div>
         </div>
 
-
         <div class="row-spacer"></div>
-		<h4>Number of IED Events by City</h4>
-		<div class="row">
-		        <div id="timeBarChartVis" class="col-md-9"></div>
-		</div>
 		<div class="row">
 		        <div id="heatMatrixVis" class="col-md-9"></div>
-		        <div id="cityBarChartVis" class="col-md-3"></div>
 		</div>
 
     </div>
@@ -87,7 +79,5 @@
     <script type="text/javascript" src="js/counts.js"></script>
     <script type="text/javascript" src="js/map-main.js"></script>
     <script type="text/javascript" src="js/heatMatrix.js"></script>
-    <script type="text/javascript" src="js/cityBarChart.js"></script>
-    <script type="text/javascript" src="js/timeBarChart.js"></script>
 </body>
 </html>
