City filter, legend

--- a/v2/map.html
+++ b/v2/map.html
@@ -68,6 +68,7 @@
     <script type="text/javascript" src="lib/other/queue.min.js"></script>
     <script type="text/javascript" src="lib/other/topojson.js"></script>
     <script type="text/javascript" src="lib/d3/d3.min.js"></script>
+    <script type="text/javascript" src="lib/d3/d3.tip.js"></script>
     <script type="text/javascript" src="lib/other/colorbrewer.js"></script>
 
     <!-- Load Project libraries -->
