--- a/v2/map.html
+++ b/v2/map.html
@@ -32,7 +32,7 @@
         </div>
         <div class="row-spacer"></div>
         <div class="row">
-            <div class="col-md-8">
+            <div class="col-md-4">
                 <div class="form-group">
                     <label><strong>Region color</strong>&nbsp;
                         <select class="form-control" id="regionColorSelect" onchange="regionColorSelect()">
@@ -41,6 +41,16 @@
                             <option value="IEDevents">IED Incidents</option>
                             <option value="KIA">Persons Killed</option>
                             <option value="WIA">Persons Wounded</option>
+                        </select>
+                    </label>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="form-group">
+                    <label><strong>Circle color</strong>&nbsp;
+                        <select class="form-control" id="circleColorSelect" onchange="circleColorSelect()">
+                            <option value="effect">Effect</option>
+                            <option value="type">IED Type</option>
                         </select>
                     </label>
                 </div>
