Text Vis commit

--- a/v2/how.html
+++ b/v2/how.html
@@ -56,9 +56,9 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-12">
-                        <div id="textVis" class="img-responsive"></div>
-                        <div id="fullTextVis" class="img-responsive"></div>
+                    <div class="col-md-8">
+                        <div id="textVis" ></div>
+                        <div id="fullTextVis" ></div>
                     </div>
                 </div>
             </div>
