HTML Update on all pages

--- a/v2/index.html
+++ b/v2/index.html
@@ -17,7 +17,7 @@
     <!-- Header Navigation -->
     <div id="header"></div>
 
-    <div class="container">
+    <div id="body-container" class="container">
         <div class="row-spacer"></div>
         <div class="row-spacer"></div>
         <div class="row">
