--- a/v2/what.html
+++ b/v2/what.html
@@ -18,7 +18,7 @@
     <!-- Header Navigation -->
     <div id="header"></div>
 
-    <div class="container">
+    <div id="body-container" class="container">
         <div class="page-header">
             <h3>&nbsp;What</h3>
         </div>
