--- a/v2/how.html
+++ b/v2/how.html
@@ -18,7 +18,7 @@
     <!-- Header Navigation -->
     <div id="header"></div>
 
-    <div class="container">
+    <div id="body-container" class="container">
         <div class="page-header">
             <h3>&nbsp;How did the IED actions happen?</h3>
         </div>
