--- a/v2/map.html
+++ b/v2/map.html
@@ -17,7 +17,7 @@
     <!-- Header Navigation -->
     <div id="header"></div>
 
-    <div class="container">
+    <div id="body-container" class="container">
         <div class="page-header">
             <h3>&nbsp;Where & When </h3>
         </div>
