--- a/v2/index.html
+++ b/v2/index.html
@@ -18,39 +18,76 @@
     <div id="header"></div>
 
     <div id="body-container" class="container">
-        <div class="row-spacer"></div>
+
+
+        <div class="row bgimagerow">
+            <div class="col-md-12 bgimage">
+
+                <div class="bgimage-inside">
+
+                    <div>Intro text here....</div>
+                </div>
+            </div>
+        </div>
+
+
         <div class="row-spacer"></div>
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-6">
                 <div id="timelineVis" class="img-responsive"></div>
             </div>
-        </div>
-        <div class="row-spacer"></div>
-        <div class="row-spacer"></div>
-        <div class="row-spacer"></div>
-        <div class="row">
-            <div class="col-md-1"></div>
-            <div class="col-md-10 text-center">
+            <div class="col-md-6 text-center">
+                <div class="text-left">From January 2014 to Decemeber 2015 there were.......</div>
                 <div id="countsVis" class="img-responsive"></div>
             </div>
-            <div class="col-md-1"></div>
         </div>
-        <div class="row-spacer"></div>
-        <div class="row-spacer"></div>
         <div class="row-spacer"></div>
         <div class="row">
-            <div class="col-md-3"></div>
-            <div class="col-md-6 text-center">
-                <a href="map.html" class="btn btn-success btn-lg btn-block">Explore <i class="fa fa-play" aria-hidden="true"></i></a>
+            <div class="col-md-3">
+                <div class="panel panel-default">
+                    <div class="panel-heading">Explore the Data</div>
+                    <div class="panel-body">
+                        <img src="img/where.png" class="img-responsive">
+                    </div>
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading">Explore the Data</div>
+                    <div class="panel-body">
+                        <img src="img/where2.png" class="img-responsive">
+                    </div>
+                </div>
             </div>
-            <div class="col-md-3"></div>
+            <div class="col-md-6">
+                <p>
+                    An IED can be almost anything with any type of material and initiator. It is a "homemade" device that is designed to cause death or injury by using explosives alone or in combination with toxic chemicals, biological toxins, or radiological material. IEDs can be produced in varying sizes, functioning methods, containers, and delivery methods. IEDs can utilize commercial or military explosives, homemade explosives, or military ordnance and ordnance components.
+                    They are unique in nature because the IED builder has had to improvise with the materials at hand. Designed to defeat a specific target or type of target, they generally become more difficult to detect and protect against as they become more sophisticated.
+
+                </p>
+                <p>
+                    IEDs can be hidden anywhere: on animals, planted in roads or strapped to a person. They can be detonated via cell phones or trip wires, among other methods. They can be deployed everywhere: in a combat environment or in the middle of a busy city. The adaptability of IEDs to almost any situation makes them difficult to detect.
+                </p>
+                <p>
+                    IEDs, or Improvised Explosives Devices, are one of the main causes of causalities among troops and exact a heavy toll on local populations.
+
+                </p>
+            </div>
+            <div class="col-md-3">
+                <div class="panel panel-default">
+                    <div class="panel-heading">Explore the Data</div>
+                    <div class="panel-body">
+                        <img src="img/what.png" class="img-responsive">
+                    </div>
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading">Explore the Data</div>
+                    <div class="panel-body">
+                        <img src="img/how.png" class="img-responsive">
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="row-spacer"></div>
-        <div class="row-spacer"></div>
-        <div class="row-spacer"></div>
-        <div class="row-spacer"></div>
-        <div class="row-spacer"></div>
-        <div class="row-spacer"></div>
+
+        
     </div>
 
 
