--- a/v2/process.html
+++ b/v2/process.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>NATO - Ukraine IED Incidents</title>
+    <title>Ukraine IED Incidents</title>
 
     <!-- Load CSS libraries -->
     <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
@@ -17,14 +17,19 @@
     <!-- Header Navigation -->
     <div id="header"></div>
 
+    <div id="body-container" class="container">
+
+    </div>
 
     <!-- Load JS libraries -->
     <script type="text/javascript" src="lib/jquery/jquery.min.js"></script>
     <script type="text/javascript" src="lib/bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="lib/other/queue.min.js"></script>
     <script type="text/javascript" src="lib/d3/d3.min.js"></script>
+    <script type="text/javascript" src="lib/other/lodash.min.js"></script>
 
     <!-- Load Project libraries -->
-    <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="js/common.js"></script>
 
     <!-- Load Page libraries -->
 </body>
