--- a/v2/how.html
+++ b/v2/how.html
@@ -20,7 +20,33 @@
 
     <div id="body-container" class="container">
         <div class="page-header">
-            <h4>&nbsp;How did the IED actions happen?</h4>
+            <h4>Explore How the Incidents Occurred</h4>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="fact">
+                    <p>
+                        Ukraine regions are not equally affected by IED incidents. Incidents were concentrated in three cities: Kiev, Kharkiv and Odessa. There were over 80 incidents in each. However, although there was a much higher number of incidents reported for these cities than for any other city (almost 100), less than 10 persons were killed in those 360 incidents.
+                    </p>
+                    <button type="button" class="btn btn-primary factbutton" onclick="showMapKiev()">Show Me Kiev</button>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="fact"><p>
+                    Most of the remaining IED incidents are spread in the Donetsk and the Luhansk regions, representing 136 and 92 incidents respectively. These two areas are also the most active regions for IED incidents at the end of 2015.
+                </p>
+                    <button type="button" class="btn btn-primary" onclick="showMapDonestk()">Show Me Donetsk</button>
+                </div>
+
+            </div>
+            <div class="col-md-4">
+                <div class="fact">
+                    <p>
+                        In the reported incidents, many different types of IEDs were mentioned. Some types are more dangerous than others.
+                    </p>
+                    <a href="what.html" class="btn btn-primary" >Continue to IED Types Exploration <i class="fa fa-play" aria-hidden="true"></i></a>
+                </div>
+            </div>
         </div>
         <div class="row-spacer"></div>
         <div class="row">
@@ -56,19 +82,21 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-8">
-                        <div id="textVis" ></div>
-                        <div id="fullTextVis" ></div>
-                    </div>
+
                 </div>
             </div>
-            <div class="col-md-4 text-timeline-container">
+
+        </div>
+        <div class="row">
+            <div class="col-md-7">
+                <div id="fullTextVis" ></div>
+            </div>
+            <div class="col-md-5 text-timeline-container">
                 <section id="text-timeline" class="cd-container">
 
                 </section>
             </div>
         </div>
-
 
 
 
