--- a/v2/map.html
+++ b/v2/map.html
@@ -19,9 +19,9 @@
 
     <div id="body-container" class="container">
         <div class="page-header">
-            <h4>Where did the Incidents Happen?</h4>
+            <h4>Where did the Incidents Occur?</h4>
         </div>
-        <div class="row factbox">
+        <div class="row">
             <div class="col-md-4">
                 <div class="fact">
                     <p>
