--- a/v2/how.html
+++ b/v2/how.html
@@ -89,14 +89,17 @@
 
             </div>
             <div class="row">
-                <div class="col-md-7">
+                <div class="col-md-8">
                     <div id="fullTextVis" ></div>
                 </div>
-                <div class="col-md-5 text-timeline-container">
+                <div class="col-md-4 text-timeline-container">
                     <section id="text-timeline" class="cd-container">
 
                     </section>
                 </div>
+            </div>
+            <div class="row">
+
             </div>
         </div>
 
