--- a/v2/how.html
+++ b/v2/how.html
@@ -61,48 +61,40 @@
         <div class="text-vis-container">
             <div class="row">
                 <div class="col-md-8">
-                    <div class="row">
-                        <div class="col-md-5"><label>View:&nbsp;</label></div>
-                        <div class="col-md-4"><label>By:&nbsp;</label></div>
-                        <div class="col-md-3"><label>Similarity:&nbsp;</label></div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-5">
-                            <label class="radio-inline"><input type="radio" name="reporttype" checked>Incident Reports</label>
-                            <label class="radio-inline"><input type="radio" name="reporttype">Word Cloud</label>
-                        </div>
-                        <div class="col-md-4">
-                            <label class="radio-inline"><input type="radio" name="displaytype" value="incidenttype" checked>Incident Types</label>
-                            <label class="radio-inline"><input type="radio" name="displaytype" value="casualities">Casualities</label>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="range range-primary">
-                                <input type="range" id="thersholdSlider" name="range" min="50" max="100" value="50">
-                                <output id="thersholdSliderValue">50%</output>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-
-                    </div>
-                </div>
-
-            </div>
-            <div class="row">
-                <div class="col-md-8">
                     <div id="fullTextVis" ></div>
                 </div>
-                <div class="col-md-4 text-timeline-container">
-                    <section id="text-timeline" class="cd-container">
+                <div class="col-md-4">
+                    <div id="text-timeline-title">
 
+                    </div>
+                    <section id="text-timeline" class="cd-container">
                     </section>
                 </div>
             </div>
             <div class="row">
-
+                <div class="col-md-4">
+                    <section id="text-timeline1" class="cd-container">
+                    </section>
+                </div>
+                <div class="col-md-4">
+                    <section id="text-timeline2" class="cd-container">
+                    </section>
+                </div>
+                <div class="col-md-4">
+                    <section id="text-timeline3" class="cd-container">
+                    </section>
+                </div>
             </div>
         </div>
 
+        <div class="row">
+            <div class="col-md-3">
+                <div class="range range-primary">
+                    <input type="range" id="thersholdSlider" name="range" min="50" max="100" value="50">
+                    <output id="thersholdSliderValue">50%</output>
+                </div>
+            </div>
+        </div>
 
 
 
