--- a/v2/how.html
+++ b/v2/how.html
@@ -20,7 +20,7 @@
 
     <div id="body-container" class="container">
         <div class="page-header">
-            <h4>How the Incidents Occurred? - Interpreting the Free Text Reports1111</h4>
+            <h4>How the Incidents Occurred? - Interpreting the Free Text Reports</h4>
         </div>
         <div class="row">
             <div class="col-md-12">
