Common colors and additional region data

--- a/v2/map.html
+++ b/v2/map.html
@@ -63,8 +63,11 @@
                 <div class="form-group">
                     <label><strong>Region color</strong>&nbsp;
                         <select class="form-control" id="regionColorSelect" onchange="regionColorSelect()">
+                            <option value="pct_russian_speakers">% Russian Spearkers</option>
                             <option value="population">Population</option>
                             <option value="pop_density">Population Density</option>
+                            <option value="pop_russians">Ukrainian Population</option>
+                            <option value="pop_ukranians">Russian Population</option>
                             <option value="IEDevents">IED Incidents</option>
                             <option value="KIA">Persons Killed</option>
                             <option value="WIA">Persons Wounded</option>
