Update with footer

--- a/v2/index.html
+++ b/v2/index.html
@@ -73,18 +73,22 @@
         <div class="row-spacer"></div>
         <div class="row">
             <div class="col-md-3">
-                <div class="panel panel-info">
-                    <div class="panel-heading"><h3 class="panel-title">Explore the Data</h3></div>
-                    <div class="panel-body">
-                        <img src="img/where.png" class="img-responsive">
+                <a href="where.html">
+                    <div class="panel panel-info">
+                        <div class="panel-heading"><h3 class="panel-title">Explore the Data</h3></div>
+                        <div class="panel-body" style="background: url('img/where.png') no-repeat !important;height: 250px">
+
+                        </div>
                     </div>
-                </div>
-                <div class="panel panel-info">
-                    <div class="panel-heading"><h3 class="panel-title">Explore the Data</h3></div>
-                    <div class="panel-body">
-                        <img src="img/where2.png" class="img-responsive">
+                </a>
+                <a href="where.html">
+                    <div class="panel panel-info">
+                        <div class="panel-heading"><h3 class="panel-title">Explore the Data</h3></div>
+                        <div class="panel-body" style="background: url('img/where2.png') no-repeat !important;height: 250px">
+
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
             <div class="col-md-6">
                 <div class="panel panel-info">
@@ -117,24 +121,29 @@
 
             </div>
             <div class="col-md-3">
-                <div class="panel panel-info">
-                    <div class="panel-heading"><h3 class="panel-title">Explore the Data</h3></div>
-                    <div class="panel-body">
-                        <img src="img/what.png" class="img-responsive">
+                <a href="what.html">
+                    <div class="panel panel-info">
+                        <div class="panel-heading"><h3 class="panel-title">Explore the Data</h3></div>
+                        <div class="panel-body" style="background: url('img/what.png') no-repeat !important;height: 250px;">
+
+                        </div>
                     </div>
-                </div>
-                <div class="panel panel-info">
-                    <div class="panel-heading"><h3 class="panel-title">Explore the Data</h3></div>
-                    <div class="panel-body">
-                        <img src="img/how.png" class="img-responsive">
+                </a>
+                <a href="how.html">
+                    <div class="panel panel-info">
+                        <div class="panel-heading"><h3 class="panel-title">Explore the Data</h3></div>
+                        <div class="panel-body" style="background: url('img/how.png') no-repeat !important;height: 250px;">
+
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
         </div>
 
 
     </div>
 
+    <div id="footer"></div>
 
     <!-- Load JS libraries -->
     <script type="text/javascript" src="lib/jquery/jquery.min.js"></script>
