--- a/v2/process.html
+++ b/v2/process.html
@@ -18,8 +18,78 @@
     <div id="header"></div>
 
     <div id="body-container" class="container">
+        <div class="page-header">
+            <h4>Our Team</h4>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="panel panel-primary" style="height: 278px;">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Valérie Lavigne</h3>
+                    </div>
+                    <div class="panel-body">
+                        <div class="text-center">valelavi@gmail.com</div>
+                        <div class="text-center"><img src="img/valerie.png"> </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="panel panel-primary" style="height: 278px;">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Marius Panga</h3>
+                    </div>
+                    <div class="panel-body">
+                        <div class="text-center">marius.c.panga@gmail.com</div>
+                        <div class="text-center"><img src="img/marius.png"> </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="panel panel-primary" style="height: 278px;">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Shivas Jayaram</h3>
+                    </div>
+                    <div class="panel-body">
+                        <div class="text-center">shivasj@gmail.com</div>
+                        <div class="text-center"><img src="img/shivas.png"> </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-6">
+                <div class="page-header">
+                    <h4>Process Book</h4>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <a href="Process%20_Book.pdf" target="_blank" class="btn btn-default">Download</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="page-header">
+                    <h4>Project Versions</h4>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <a href="http://nato-project.github.io/v2/" target="_blank" class="btn btn-default">Version 2 Prototype</a>
+                    </div>
+                </div>
+                <div class="row-spacer"></div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <a href="http://nato-project.github.io/v1/" target="_blank" class="btn btn-default">Version 1 Prototype</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
 
     </div>
+
+    <div id="footer"></div>
 
     <!-- Load JS libraries -->
     <script type="text/javascript" src="lib/jquery/jquery.min.js"></script>
