--- a/v2/what.html
+++ b/v2/what.html
@@ -105,6 +105,8 @@
 
 </div>
 
+<div id="footer"></div>
+
 <!-- Load JS libraries -->
 <script type="text/javascript" src="lib/jquery/jquery.min.js"></script>
 <script type="text/javascript" src="lib/bootstrap/js/bootstrap.min.js"></script>
