--- a/v2/how.html
+++ b/v2/how.html
@@ -20,7 +20,7 @@
 
     <div id="body-container" class="container">
         <div class="page-header">
-            <h4>How the Incidents Occurred? - Interpreting the Free Text Reports</h4>
+            <h4>How these Incidents Occurred? - Interpreting the Free Text Reports</h4>
         </div>
         <div class="row">
             <div class="col-md-12">
@@ -53,6 +53,22 @@
         <div class="row-spacer"></div>
         <div class="text-vis-container">
             <div class="row">
+                <div class="col-md-6">
+                    <span class="text-vis-notes"><small>Click on a the words, nodes or the legend to show the text reports for the incidents.</small></span>
+
+                </div>
+                <div class="col-md-3 text-right">
+                    <strong>Change Report Similarity(%):</strong>
+                </div>
+                <div class="col-md-3">
+                    <div class="range range-primary">
+                        <input type="range" id="thersholdSlider" name="range" min="0" max="100" value="50">
+                        <output id="thersholdSliderValue">50%</output>
+                    </div>
+                </div>
+
+            </div>
+            <div class="row">
                 <div class="col-md-8">
                     <div id="fullTextVis" ></div>
                 </div>
@@ -82,10 +98,7 @@
 
         <div class="row">
             <div class="col-md-3">
-                <div class="range range-primary">
-                    <input type="range" id="thersholdSlider" name="range" min="50" max="100" value="50">
-                    <output id="thersholdSliderValue">50%</output>
-                </div>
+
             </div>
         </div>
 
@@ -93,6 +106,8 @@
 
 
     </div>
+
+    <div id="footer"></div>
 
     <!-- Load JS libraries -->
     <script type="text/javascript" src="lib/jquery/jquery.min.js"></script>
