Update Text Vis

--- a/how.html
+++ b/how.html
@@ -54,7 +54,7 @@
         <div class="text-vis-container">
             <div class="row">
                 <div class="col-md-6">
-                    <span class="text-vis-notes"><small>Click on a the words, nodes or the legend to show the text reports for the incidents.</small></span>
+                    <span class="text-vis-notes"><small>Click on the words, nodes or the legend to show the text reports for the incidents.</small></span>
 
                 </div>
                 <div class="col-md-3 text-right">
@@ -123,7 +123,6 @@
     <!-- Load Page libraries -->
     <script type="text/javascript" src="js/timeline.js"></script>
     <script type="text/javascript" src="js/counts.js"></script>
-    <script type="text/javascript" src="js/word-cloud.js"></script>
     <script type="text/javascript" src="js/full-text.js"></script>
     <script type="text/javascript" src="js/how-main.js"></script>
 </body>
