Changed the description on What
- changed the description to avoid redundancy
- added 4 buttons enabling shortcuts to bits of the analysis

--- a/what.html
+++ b/what.html
@@ -27,9 +27,17 @@
         <div class="col-md-8">
             <div class="fact">
                 <p>
-                    An IED is a "homemade" device that is designed to cause death or injury by using explosives alone or in combination with toxic chemicals, biological toxins, or radiological material. IEDs can be produced in varying sizes, functioning methods, containers, and delivery methods. They can also be clasified in various predefined types in order to aid analysis. Unfortunately, it is often the case that there is not enough information to assign and IED to a specific type.
-                    While 88% of incidents resulted in no casualties, partly because they were hoaxes and false alarms and partly because they were found on time, there is still a significant number of injuries and fatalities. The most dangerous types of IEDs have been identified to be the Remote Controlled devices (RCIEDs), leaving behind 6 dead and 18 wounded, and the Vehicle-borne explosive devices(VBIEDs), leaving behind 12 dead and 12 wounded.
-            </p>
+                    The IEDs in this dataset have been classified in predefined types in order to facilitate the analysis. Unfortunately, it is often the case that there is not enough information available in oder to assign an IED to a specific type.
+                    <br> <br>While 88% of incidents resulted in no casualties, partly because they were hoaxes and false alarms and partly because they were found on time, there is still a high overall number of injuries and fatalities. The most dangerous types of IEDs have been identified to be the Remote Controlled devices (RCIEDs), leaving behind 6 dead and 18 wounded, and the Vehicle-borne explosive devices(VBIEDs), leaving behind 12 dead and 12 wounded.
+
+                </p>
+                <div class="button-list">
+                    <span><button type="button" class="btn btn-primary" onclick="showMeHoaxes()">Show Me Hoaxes</button></span>
+                    <span><button type="button" class="btn btn-primary" onclick="showMeFound()">Show Me Found</button></span>
+                    <span><button type="button" class="btn btn-primary" onclick="showMeRCIED()">Show Me RCIEDs</button></span>
+                    <span><button type="button" class="btn btn-primary" onclick="showMeVBIED()">Show Me VBIEDs</button></span>
+                </div>
+
             </div>
         </div>
         <div class="col-md-4">
