Amend IED Type tooltips
- amend missing IED Type tooltips
- renamed the sankeyStyle.css to what.css

--- a/what.html
+++ b/what.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/how.css">
-    <link rel="stylesheet" href="css/sankeyStyle.css">
+    <link rel="stylesheet" href="css/what.css">
 </head>
 
 <body>
