Emphasized EDGES and NODES

--- a/what.html
+++ b/what.html
@@ -80,7 +80,7 @@
         </div>
         <div class="row">
             <div class="col-md-8">
-                <span class="text-vis-notes"><small>Mouse over the edges or nodes to show more details about the respective incidents.</small></span>
+                <span class="text-vis-notes"><small>Mouse over the EDGES or NODES to see more details about the respective incidents.</small></span>
                 <div id="sankeyVis"></div>
             </div>
          <div class="col-md-4">
